# modular

./: .gitignore  LICENSE  README.md  modular.cabal  package.yaml  stack.yaml
.circleci/: config.yml
.github/workflows/: ci.yml
src/: ReaderMonad.hs  Reciprocal.hs  Reflection.hs  TypeLevelNatural.hs
test/: Spec.hs
