cabal-version: 3.8
name: modular
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/cohei/modular#readme>
homepage: https://github.com/cohei/modular#readme
bug-reports: https://github.com/cohei/modular/issues
author: TANIGUCHI Kohei
maintainer: a.d.xvii.kal.mai@gmail.com
copyright: 2018 TANIGUCHI Kohei
license: BSD-3-Clause
license-file: LICENSE
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/cohei/modular

common common-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wmissing-import-lists
    -Wmissing-local-signatures
    -Wmonomorphism-restriction
    -Wpartial-fields
    -Wredundant-constraints

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    ReaderMonad
    Reciprocal
    Reflection
    TypeLevelNatural

  build-depends:
    base >=4.7 && <5,
    mtl,
    reflection,

test-suite modular-test
  import: common-options
  hs-source-dirs: test
  main-is: Spec.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Werror

  build-depends:
    base >=4.7 && <5,
    hspec,
    modular,
    mtl,
    reflection,
